更新package.json以包含404错误页面和.htaccess文件的复制，增强用户体验；更新README文档，详细描述404页面功能和自动重定向配置；优化CSS样式，添加新样式类以提升页面布局和可读性。

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:css": "postcss common/styles/input.css -o common/styles/output.css --watch",
     "dev": "pnpm run watch:css",
     "build": "pnpm run build:css && pnpm run copy-assets",
-    "copy-assets": "pnpm dlx mkdirp dist && pnpm dlx copyfiles -u 0 \"index.html\" \"tailwind.config.js\" \"dist/\" && pnpm dlx copyfiles -u 0 \"models/**/*\" \"applications/**/*\" \"about/**/*\" \"common/**/*\" \"dist/\"",
+    "copy-assets": "pnpm dlx mkdirp dist && pnpm dlx copyfiles -u 0 \"index.html\" \"404.html\" \".htaccess\" \"tailwind.config.js\" \"dist/\" && pnpm dlx copyfiles -u 0 \"models/**/*\" \"applications/**/*\" \"about/**/*\" \"common/**/*\" \"dist/\"",
     "serve": "cd dist && pnpm dlx http-server -p 3000",
     "clean": "pnpm dlx rimraf dist",
     "deploy": "pnpm run clean && pnpm run build && pnpm run serve",
