更新404.html和index.html，移除冗余的导航栏和页脚代码，添加全局配置脚本以提升页面结构和可维护性；更新package.json以引入新的构建命令，优化构建流程。

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "serve": "cd dist && pnpm dlx http-server -p 3000",
     "clean": "pnpm dlx rimraf dist",
     "deploy": "pnpm run clean && pnpm run build && pnpm run serve",
-    "build:prod": "pnpm run build:css && pnpm run copy-assets",
-    "zip": "pnpm run clean && pnpm run build:prod && pnpm dlx bestzip dist.zip dist/"
+    "build:prod": "pnpm run build:all && pnpm run build:css && pnpm run copy-assets",
+    "zip": "pnpm run clean && pnpm run build:prod && pnpm dlx bestzip dist.zip dist/",
+    "build:all": "tailwindcss -i ./common/styles/input.css -o ./common/styles/output.css && copy /Y .\\common\\styles\\output.css .\\dist\\common\\styles\\output.css"
   },
   "keywords": [],
   "author": "",
